deploy/k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-agent
  namespace: telemetry-analyst
  labels:
    app: ta-agent
    component: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: ta-agent
      component: api
  template:
    metadata:
      labels:
        app: ta-agent
        component: api
    spec:
      serviceAccountName: ta-agent
      imagePullSecrets:
        - name: ocir
      containers:
        - name: api
          image: syd.ocir.io/orasejapan/telemetry-analyst:v0.2.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
