deploy/k8s/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-agent-ui
  namespace: telemetry-analyst
  labels:
    app: ta-agent
    component: ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: ta-agent
      component: ui
  template:
    metadata:
      labels:
        app: ta-agent
        component: ui
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: ui
          image: kix.ocir.io/nr3c2r62ocsa/telemetry-analyst/ui:v0.2.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
